--- a/rollup-namespaced/sfdx-project.json
+++ b/rollup-namespaced/sfdx-project.json
@@ -4,8 +4,8 @@
             "default": true,
             "package": "apex-rollup-namespaced",
             "path": "rollup-namespaced/source/rollup",
-            "versionName": "Continued full recalc optimizations",
-            "versionNumber": "1.0.52.0",
+            "versionName": "Updating stateful batch logic for MOST, FIRST, LAST, AVERAGE, and SOME calculations",
+            "versionNumber": "1.0.53.0",
             "versionDescription": "Fast, configurable, elastically scaling custom rollup solution. Apex Invocable action, one-liner Apex trigger/CMDT-driven logic, and scheduled Apex-ready.",
             "releaseNotesUrl": "https://github.com/jamessimone/apex-rollup/releases/latest",
             "unpackagedMetadata": {
@@ -21,17 +21,8 @@
     "sourceApiVersion": "58.0",
     "packageAliases": {
         "apex-rollup-namespaced": "0Ho6g000000PBMjCAO",
-        "apex-rollup-namespaced@1.0.41-0": "04t6g000008SnldAAC",
-        "apex-rollup-namespaced@1.0.42-0": "04t6g000008SnlsAAC",
-        "apex-rollup-namespaced@1.0.43-0": "04t6g000008SnrcAAC",
-        "apex-rollup-namespaced@1.0.44-0": "04t6g000008So66AAC",
-        "apex-rollup-namespaced@1.0.45-0": "04t6g000008C6koAAC",
-        "apex-rollup-namespaced@1.0.46-0": "04t6g000008C6l3AAC",
-        "apex-rollup-namespaced@1.0.47-0": "04t6g000008C6lcAAC",
-        "apex-rollup-namespaced@1.0.48-0": "04t6g000008C6rMAAS",
-        "apex-rollup-namespaced@1.0.49-0": "04t6g000008C6stAAC",
-        "apex-rollup-namespaced@1.0.50-0": "04t6g000008C6zbAAC",
         "apex-rollup-namespaced@1.0.51-0": "04t6g000008C71cAAC",
-        "apex-rollup-namespaced@1.0.52-0": "04t6g000008C72GAAS"
+        "apex-rollup-namespaced@1.0.52-0": "04t6g000008C72GAAS",
+        "apex-rollup-namespaced@1.0.53-0": "04t6g000008C739AAC"
     }
 }
