--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -4,7 +4,7 @@
             "default": true,
             "package": "apex-rollup",
             "path": "rollup",
-            "versionName": "README updates",
+            "versionName": "README updates, fixes grandparent full recalc dereference error",
             "versionNumber": "1.5.89.0",
             "versionDescription": "Fast, configurable, elastically scaling custom rollup solution. Apex Invocable action, one-liner Apex trigger/CMDT-driven logic, and scheduled Apex-ready.",
             "releaseNotesUrl": "https://github.com/jamessimone/apex-rollup/releases/latest",
@@ -99,9 +99,10 @@
         "Apex Rollup - Rollup Callback@0.0.3-0": "04t6g000008Sis0AAC",
         "Nebula Logger - Core@4.8.0-NEXT-ignore-origin-method": "04t5Y0000015lslQAA",
         "apex-rollup": "0Ho6g000000TNcOCAW",
-        "apex-rollup@1.5.85-0": "04t6g000008C6zWAAS",
         "apex-rollup@1.5.86-0": "04t6g000008C71XAAS",
         "apex-rollup@1.5.87-0": "04t6g000008C72BAAS",
-        "apex-rollup@1.5.88-0": "04t6g000008C734AAC"
-    }
+        "apex-rollup@1.5.88-0": "04t6g000008C734AAC",
+        "apex-rollup@1.5.89-0": "04t6g000008C77gAAC"
+    },
+    "restDeploy": "false"
 }
