--- a/package.json
+++ b/package.json
@@ -9,21 +9,21 @@
   "author": "james.simone",
   "license": "MIT",
   "devDependencies": {
-    "@babel/core": "7.23.7",
-    "@babel/eslint-parser": "7.23.3",
+    "@babel/core": "7.24.4",
+    "@babel/eslint-parser": "7.24.1",
     "@jongpie/sfdx-bummer-plugin": "^0.0.20",
     "@ljharb/eslint-config": "21.1.0",
     "@lwc/eslint-plugin-lwc": "1.7.2",
-    "@prettier/plugin-xml": "3.2.2",
-    "@salesforce/cli": "2.29.5",
-    "@salesforce/eslint-config-lwc": "3.5.2",
+    "@prettier/plugin-xml": "3.4.1",
+    "@salesforce/cli": "2.35.6",
+    "@salesforce/eslint-config-lwc": "3.5.3",
     "@salesforce/eslint-plugin-lightning": "1.0.0",
-    "@salesforce/sfdx-lwc-jest": "3.1.1",
+    "@salesforce/sfdx-lwc-jest": "4.0.1",
     "@salesforce/sfdx-scanner": "^4.0.0",
-    "eslint": "*",
+    "eslint": "8.8.0",
     "eslint-config-prettier": "9.1.0",
-    "husky": "8.0.3",
-    "lint-staged": "15.2.0",
+    "husky": "9.0.11",
+    "lint-staged": "15.2.2",
     "prettier": "3.2.5",
     "prettier-plugin-apex": "2.1.0"
   },
